--- a/style.css
+++ b/style.css
@@ -25,14 +25,20 @@ button {
 #calculator {
   width: 250px;
   padding: 5px;
+  box-sizing: border-box;
 }
 
 #display {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: right;
+  align-items: center;
   color: #e8e8e8;
   background-color: #1F1F1F;
   border: 1px solid #313335;
   width: 100%;
   height: 50px;
+  padding: 5px;
 }
 
 .buttons-list {
